tests/test_files/errors/include_self.over
obj: <Obj "include_self.over">
